--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@
     padding: 1px;
     background-color: rgb(0, 0, 0);
     text-align: center;
+    transition-property: inherit;
 }
 
 #button {
